{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 31,
  "lineage": "557786a9-89cc-c9a6-bc70-6db992bc9ceb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "proj_3_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:485454785364:listener/app/proj-3-alb/f6a0704aa6a9e5d1/a8d1e0e50989376a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:485454785364:targetgroup/proj-3-alb-target-group/0c83b045822a80a0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:485454785364:listener/app/proj-3-alb/f6a0704aa6a9e5d1/a8d1e0e50989376a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:485454785364:loadbalancer/app/proj-3-alb/f6a0704aa6a9e5d1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.proj_3_alb_terget_group",
            "aws_lb.proj_3_alb",
            "aws_security_group.proj_3_sec_group",
            "aws_subnet.public_sub_1_az1",
            "aws_subnet.public_sub_2_az2",
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "proj_3_alb_terget_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:485454785364:targetgroup/proj-3-alb-target-group/0c83b045822a80a0",
            "arn_suffix": "targetgroup/proj-3-alb-target-group/0c83b045822a80a0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:485454785364:targetgroup/proj-3-alb-target-group/0c83b045822a80a0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "proj-3-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea83757046886c2b"
          },
          "dependencies": [
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Proj_3_server_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a8c865b4de3b127",
            "arn": "arn:aws:ec2:eu-west-2:485454785364:instance/i-036c69570aaa8c99a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-036c69570aaa8c99a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Derek-KP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0121a32b6372019d1",
            "private_dns": "ip-10-0-0-224.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.224",
            "public_dns": "ec2-18-133-245-190.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.245.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a3eb9250094fac8d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02562024525f30d28",
            "tags": {
              "Name": "proj_3_server_1"
            },
            "tags_all": {
              "Name": "proj_3_server_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08c92f6472b6904df"
            ]
          },
          "dependencies": [
            "aws_security_group.proj_3_sec_group",
            "aws_subnet.public_sub_1_az1",
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proj_3_server_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a8c865b4de3b127",
            "arn": "arn:aws:ec2:eu-west-2:485454785364:instance/i-0ab8d3ce17a05e718",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab8d3ce17a05e718",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Derek-KP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-095944df876ebf015",
            "private_dns": "ip-10-0-1-190.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.190",
            "public_dns": "ec2-3-8-132-186.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.132.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-013feed14acffe73e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ea212ed4759ec51",
            "tags": {
              "Name": "proj_3_server_2"
            },
            "tags_all": {
              "Name": "proj_3_server_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08c92f6472b6904df"
            ]
          },
          "dependencies": [
            "aws_security_group.proj_3_sec_group",
            "aws_subnet.public_sub_2_az2",
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proj_3_server_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a8c865b4de3b127",
            "arn": "arn:aws:ec2:eu-west-2:485454785364:instance/i-0e856d39b325b0545",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e856d39b325b0545",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Derek-KP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0645406fc3a4a44dc",
            "private_dns": "ip-10-0-2-178.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f59d939141a67cfd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097a8b424cc6ff263",
            "tags": {
              "Name": "proj_3_server_3"
            },
            "tags_all": {
              "Name": "proj_3_server_3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08c92f6472b6904df"
            ]
          },
          "dependencies": [
            "aws_security_group.proj_3_sec_group",
            "aws_subnet.private_sub_1_az1",
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proj_3_server_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a8c865b4de3b127",
            "arn": "arn:aws:ec2:eu-west-2:485454785364:instance/i-02494ceeea746e9a3",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02494ceeea746e9a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Derek-KP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dfe8f662d56562e6",
            "private_dns": "ip-10-0-3-179.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b496ebb47eb5b8a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05861d14f340c4c8c",
            "tags": {
              "Name": "t2.micro"
            },
            "tags_all": {
              "Name": "t2.micro"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08c92f6472b6904df"
            ]
          },
          "dependencies": [
            "aws_security_group.proj_3_sec_group",
            "aws_subnet.private_sub_2_az2",
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:485454785364:internet-gateway/igw-0e19176e5f4ad6bc1",
            "id": "igw-0e19176e5f4ad6bc1",
            "owner_id": "485454785364",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0ea83757046886c2b"
          },
          "dependencies": [
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "proj_3_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:485454785364:loadbalancer/app/proj-3-alb/f6a0704aa6a9e5d1",
            "arn_suffix": "app/proj-3-alb/f6a0704aa6a9e5d1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "proj-3-alb-261217973.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:485454785364:loadbalancer/app/proj-3-alb/f6a0704aa6a9e5d1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "proj-3-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08c92f6472b6904df"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02562024525f30d28"
              },
              {
                "subnet_id": "subnet-06ea212ed4759ec51"
              }
            ],
            "subnets": [
              "subnet-02562024525f30d28",
              "subnet-06ea212ed4759ec51"
            ],
            "vpc_id": "vpc-0ea83757046886c2b",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.proj_3_sec_group",
            "aws_subnet.public_sub_1_az1",
            "aws_subnet.public_sub_2_az2",
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "proj_3_nat_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-02ae99141d8c71395",
            "network_interface_id": "eni-070913ee59007f39c",
            "private_ip": "10.0.2.66",
            "subnet_id": "subnet-097a8b424cc6ff263"
          },
          "dependencies": [
            "aws_subnet.private_sub_1_az1",
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "proj_3_nat_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-05cc0bb9df6d2edec",
            "network_interface_id": "eni-0db0c8572f8c131d9",
            "private_ip": "10.0.3.71",
            "subnet_id": "subnet-05861d14f340c4c8c"
          },
          "dependencies": [
            "aws_subnet.private_sub_2_az2",
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:485454785364:route-table/rtb-0c9eea92bea0369ca",
            "id": "rtb-0c9eea92bea0369ca",
            "owner_id": "485454785364",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea83757046886c2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:485454785364:route-table/rtb-0d4ce4f2a6f12dd5d",
            "id": "rtb-0d4ce4f2a6f12dd5d",
            "owner_id": "485454785364",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea83757046886c2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039011a80f654a107",
            "route_table_id": "rtb-0c9eea92bea0369ca",
            "subnet_id": "subnet-097a8b424cc6ff263"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_sub_1_az1",
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fbdc615f6fc5e6d",
            "route_table_id": "rtb-0c9eea92bea0369ca",
            "subnet_id": "subnet-05861d14f340c4c8c"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_sub_2_az2",
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a8b82618c937590",
            "route_table_id": "rtb-0d4ce4f2a6f12dd5d",
            "subnet_id": "subnet-02562024525f30d28"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_sub_1_az1",
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092bcd4fb32384f9e",
            "route_table_id": "rtb-0d4ce4f2a6f12dd5d",
            "subnet_id": "subnet-06ea212ed4759ec51"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_sub_2_az2",
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proj_3_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:485454785364:security-group/sg-08c92f6472b6904df",
            "description": "security group using terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c92f6472b6904df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security group using terraform",
            "name_prefix": "",
            "owner_id": "485454785364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proj_3_sec_group"
            },
            "tags_all": {
              "Name": "proj_3_sec_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea83757046886c2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_1_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:485454785364:subnet/subnet-097a8b424cc6ff263",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097a8b424cc6ff263",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485454785364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private sub 1"
            },
            "tags_all": {
              "Name": "private sub 1"
            },
            "vpc_id": "vpc-0ea83757046886c2b"
          },
          "dependencies": [
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_2_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:485454785364:subnet/subnet-05861d14f340c4c8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05861d14f340c4c8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485454785364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private sub 2"
            },
            "tags_all": {
              "Name": "private sub 2"
            },
            "vpc_id": "vpc-0ea83757046886c2b"
          },
          "dependencies": [
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_1_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:485454785364:subnet/subnet-02562024525f30d28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02562024525f30d28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485454785364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public sub 1 az1"
            },
            "tags_all": {
              "Name": "public sub 1 az1"
            },
            "vpc_id": "vpc-0ea83757046886c2b"
          },
          "dependencies": [
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_2_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:485454785364:subnet/subnet-06ea212ed4759ec51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ea212ed4759ec51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485454785364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public sub 2"
            },
            "tags_all": {
              "Name": "public sub 2"
            },
            "vpc_id": "vpc-0ea83757046886c2b"
          },
          "dependencies": [
            "aws_vpc.proj_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "proj_3_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:485454785364:vpc/vpc-0ea83757046886c2b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098efb3134c845070",
            "default_route_table_id": "rtb-0033782db15cf6d7a",
            "default_security_group_id": "sg-0af4079f05206eca5",
            "dhcp_options_id": "dopt-05461a34506dd371f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ea83757046886c2b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0033782db15cf6d7a",
            "owner_id": "485454785364",
            "tags": {
              "Name": "proj 3 vpc"
            },
            "tags_all": {
              "Name": "proj 3 vpc"
            }
          }
        }
      ]
    }
  ]
}